Fix css on mobile.

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -154,13 +154,17 @@ footer{
  @media screen and (max-width: 767px) {
     .container {
       padding:0;
-      margin:0;
+      margin:0px;
     }
 
     body {
       padding:0;
     }
 
+    .row {
+      margin-left: 0px;
+      margin-right: 0px;
+    }
     .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
       margin-left: 0;
       margin-right: 0;
